# anime-quiz-app

./: .gitignore
backend/: Cargo.toml
backend/src/: main.rs
backend/src/db/: db.rs
backend/src/handlers/: mod.rs  signup.rs  test.rs
backend/src/routes/: auth.rs
frontend/: package-lock.json  package.json  tailwind.config.js
frontend/src/: index.css  pageRoutes.jsx
frontend/src/pages/: login.jsx  signUp.jsx
